# openness-crawler-prefect

./: .gitignore  README.md  baseline.py  crawl4ai_helpers.py  create_table.py  create_table_openaccess.py  hello.py  pyproject.toml  read_universities.py  utils.py
definitions/: base.py  forschungsdatenrepo.py  open_lms.py  openaccess.py
tasks/: scraper.py
